--- a/intrests.html
+++ b/intrests.html
@@ -58,6 +58,7 @@
                     <p>Od wielu lat każdy ciepły weekend spędzam nad wodą, surfując lub żeglując ze znajomymi.</p>
                 </div>
             </article>
+        </section>
     </main>
 
     <footer>
