--- a/detailedProjects.html
+++ b/detailedProjects.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header>
-        <h1>Cześć. Oto moje portfolio!</h1>
+        <h1>Portfolio</h1>
         <nav>
             <ul>
-                <li><a href="website.html">Strona główna</a></li>
-                <li><a href="projects.html">Projekty</a></li>
-                <li><a href="detailedProjects.html" class="active">Szczegóły projektów</a></li>
-                <li><a href="intrests.html">Zainteresowania</a></li>
-                <li><a href="photos.html">Zdjęcia</a></li>
+                <li><a href="website.html">Main page</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="detailedProjects.html" class="active">Project's Details</a></li>
+                <li><a href="intrests.html">Intrests</a></li>
+                <li><a href="photos.html">Photos</a></li>
             </ul>
         </nav>
     </header>
@@ -102,7 +102,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Moje Portfolio</p>
+        <p>&copy; 2025 my portfolio</p>
     </footer>
 </body>
 </html>
