--- a/intrests.html
+++ b/intrests.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header>
-        <h1>Cześć. Oto moje portfolio!</h1>
+        <h1>Portfolio</h1>
         <nav>
             <ul>
-                <li><a href="website.html">Strona główna</a></li>
-                <li><a href="projects.html">Projekty</a></li>
-                <li><a href="detailedProjects.html">Szczegóły projektów</a></li>
-                <li><a href="intrests.html" class="active">Zainteresowania</a></li>
-                <li><a href="photos.html">Zdjęcia</a></li>
+                <li><a href="website.html">Main page</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="detailedProjects.html">Project's Details</a></li>
+                <li><a href="intrests.html" class="active">Intrests</a></li>
+                <li><a href="photos.html">Photos</a></li>
             </ul>
         </nav>
     </header>
@@ -27,7 +27,8 @@
             <article class="intrest">
                 <div class="intrest-info">
                     <h3>Informatyka</h3>
-                    <p>W informatyce szczególnie interesuje mnie analiza algorytmów oraz ich praktyczne zastosowania. Oprócz tego, badanie i zastosowanie algorytmów uczenia maszynowego./p>
+                    <p>W informatyce szczególnie interesuje mnie analiza algorytmów oraz ich praktyczne zastosowania. Oprócz tego, badanie i zastosowanie algorytmów uczenia maszynowego.
+                    </p>
                 </div>
             </article>
 
@@ -62,7 +63,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Moje Portfolio</p>
+        <p>&copy; 2025 my portfolio</p>
     </footer>
 </body>
 </html>
