--- a/photos.html
+++ b/photos.html
@@ -7,16 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <header>
-        <h1>Cześć. Oto moje portfolio!</h1>
+        <h1>Portfolio</h1>
         <nav>
             <ul>
-                <li><a href="website.html">Strona główna</a></li>
-                <li><a href="projects.html">Projekty</a></li>
-                <li><a href="detailedProjects.html">Szczegóły projektów</a></li>
-                <li><a href="intrests.html">Zainteresowania</a></li>
-                <li><a href="photos.html" class="active">Zdjęcia</a></li>
+                <li><a href="website.html">Main page</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="detailedProjects.html">Project's Details</a></li>
+                <li><a href="intrests.html">Intrests</a></li>
+                <li><a href="photos.html" class="active">Photos</a></li>
             </ul>
         </nav>
     </header>
@@ -32,7 +31,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Moje Portfolio</p>
+        <p>&copy; 2025 my portfolio</p>
     </footer>
 
 </body>
