--- a/website.html
+++ b/website.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header>
-        <h1>Cześć. Oto moje portfolio!</h1>
+        <h1>Portfolio</h1>
         <nav>
             <ul>
-                <li><a href="website.html" class="active">Strona główna</a></li>
-                <li><a href="projects.html">Projekty</a></li>
-                <li><a href="detailedProjects.html">Szczegóły projektów</a></li>
-                <li><a href="intrests.html">Zainteresowania</a></li>
-                <li><a href="photos.html">Zdjęcia</a></li>
+                <li><a href="website.html" class="active">Main page</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="detailedProjects.html">Project's Details</a></li>
+                <li><a href="intrests.html">Intrests</a></li>
+                <li><a href="photos.html">Photos</a></li>
             </ul>
         </nav>
     </header>
@@ -23,37 +23,36 @@
     <main>
         <section class="hero">
             <img src="photos/photo.jpg" alt="Moje zdjęcie">
-            <h2>Nazywam się Robert Rubaszek</h2>
-            <p>Jestem studentem trzeciego roku informatyki algorytmicznej na Politechnice Wrocławskiej</p>
+            <h2>My name is Robert Rubaszek</h2>
+            <p>I study Algorithmic Computer Science at Wroclaw University of Science and Technology</p>
         </section>
 
         <section class="about">
-            <h2>O mnie</h2>
-            <p>Interesuję się algorytmami, sztuczną inteligencją, uczeniem maszynowym, programowaniem backendowym i nowoczesnymi technologiami</p>
+            <h2>About me</h2>
+            <p>My interests include designing algorithms, developing backend applications, exploring machine learning and artificial intelligence. I am always eager to dive into complex programming problems, learn new technologies and contribute to innovative projects</p>
         </section>
 
         <section class="interests">
-            <h2>Moje zainteresowania</h2>
+            <h2>My interests</h2>
             <ul>
-                <li>💻 Programowanie (C++, Java, Python, Julia, Haskell)</li>
-                <li>📱 Tworzenie oprogramowania</li>
-                <li>🧠 Sztuczna inteligencja i uczenie maszynowe</li>
-                <li>📚 Łamigłowki matematyczno-logiczne</li>
-                <li>🎶 Muzyka</li>
-                <li>🧗 Ścianka wspinaczkowa</li>
+                <li>Designing and modelling algorithms</li>
+                <li>Machine learning and artificial intelligence</li>
+                <li>Game Developement</li>
+                <li>Blockchain applications</li>
+                <li>Mathematics and functional programming</li>
             </ul>
         </section>
 
         <section class="contact">
             <h2>Kontakt</h2>
-            <p>Email: <a href="mailto:twojemail@example.com">robert.rubaszek@gmail.com</a></p>
+            <p>Email: <a href="mailto:robert.rubaszek@gmail.com">robert.rubaszek@gmail.com</a></p>
             <p>Telefon: +48698776594</p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/jakis_link" target="_blank">Twój Profil</a></p>
+            <p>GitHub: <a href="https://www.github.com/rrubaszek" target="_blank">github profile</a></p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Moje Portfolio</p>
+        <p>&copy; 2025 my portfolio</p>
     </footer>
 </body>
 </html>
