--- a/projects.html
+++ b/projects.html
@@ -8,27 +8,27 @@
 </head>
 <body>
     <header>
-        <h1>Cześć. Oto moje portfolio!</h1>
+        <h1>Portfolio</h1>
         <nav>
             <ul>
-                <li><a href="website.html">Strona główna</a></li>
-                <li><a href="projects.html" class="active">Projekty</a></li>
-                <li><a href="detailedProjects.html">Szczegóły projektów</a></li>
-                <li><a href="intrests.html">Zainteresowania</a></li>
-                <li><a href="photos.html">Zdjęcia</a></li>
+                <li><a href="website.html">Main page</a></li>
+                <li><a href="projects.html" class="active">Projects</a></li>
+                <li><a href="detailedProjects.html">Project's Details</a></li>
+                <li><a href="intrests.html">Intrests</a></li>
+                <li><a href="photos.html">Photos</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section class="projects">
-            <h2>Moje Projekty Programistyczne</h2>
+            <h2>My bigger projects</h2>
 
             <article class="project">
                 <div class="project-content">
                     <h3>System Lublok</h3>
                     <p>System do zarządzania i przechowywania rządowych dokumentów, napisany w C++, wykorzystuje technologie blockchainowe, systemy rozproszone i REST API</p>
-                    <a href="#" class="btn">Zobacz projekt</a>
+                    <a href="" class="btn">Check code</a>
                 </div>
             </article>
 
@@ -36,7 +36,7 @@
                 <div class="project-content">
                     <h3>Gra w GO</h3>
                     <p>Wieloosobowa gra napisana w Javie, z wykorzystaniem Hibernate oraz technologii klient-serwer. Aplikacja umożliwia również granie z botem oraz odtwarzanie gier i ruchów z bazy danych</p>
-                    <a href="#" class="btn">Zagraj</a>
+                    <a href="https://www.github.com/rrubaszek/GoBoardGame" class="btn">Check code</a>
                 </div>
             </article>
 
@@ -44,7 +44,7 @@
                 <div class="project-content">
                     <h3>Portfolio Online</h3>
                     <p>Moja własna strona portfolio zbudowana wyłącznie przy użyciu HTML5 i CSS3, zoptymalizowana pod urządzenia mobilne.</p>
-                    <a href="#" class="btn">Zobacz stronę</a>
+                    <a href="https://www.github.com/rrubaszek/WebPage" class="btn">Check code</a>
                 </div>
             </article>
 
@@ -52,7 +52,7 @@
                 <div class="project-content">
                     <h3>Kompilator</h3>
                     <p>Kompilator customowego języka imperatywnego na maszynę wirtualną, napisany w C++. Kompilator posiada optymalizaje, takie jak upraszczanie wyrażeń stałych, bądz usuwanie martwego kodu.</p>
-                    <a href="#" class="btn">Zobacz projekt</a>
+                    <a href="https://www.github.com/rrubaszek/Compiler" class="btn">Check code</a>
                 </div>
             </article>
 
@@ -61,7 +61,7 @@
                     <h3>Space Shooter</h3>
                     <p>Gra singleplayer, napisana w C++ przy użyciu biblioteki graficznej. Wzorowana na grach arcade z lat 90.
                     </p>
-                    <a href="#" class="btn">Zobacz kod</a>
+                    <a href="https://www.github.com/rrubaszek/SpaceShooter" class="btn">Check code</a>
                 </div>
             </article>
 
@@ -69,14 +69,14 @@
                 <div class="project-content">
                     <h3>Number Recognition</h3>
                     <p>Model sztucznej inteligencji do rozpoznawania cyfr pisanych ręcznie, zamiplementowany w Pythonie przy użyciu Tensorflow oraz Matplotlib, połączony z prostym GUI</p>
-                    <a href="#" class="btn">Zobacz kod</a>
+                    <a href="#" class="btn">Check code</a>
                 </div>
             </article>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Moje Portfolio</p>
+        <p>&copy; 2025 my portfolio</p>
     </footer>
 </body>
 </html>
