--- a/intrests.html
+++ b/intrests.html
@@ -20,43 +20,46 @@
         </nav>
     </header>
 
-    <main>
         <section class="myintrests">
-            <h2>Moje zainteresowania</h2>
 
             <article class="intrest">
                 <div class="intrest-info">
-                    <h3>Informatyka</h3>
-                    <p>W informatyce szczególnie interesuje mnie analiza algorytmów oraz ich praktyczne zastosowania. Oprócz tego, badanie i zastosowanie algorytmów uczenia maszynowego.
+                    <h3>Computer Science</h3>
+                    <p>
+                        I am particularly interested in algorithms research, their practical applications, and improvements. 
+                        I am expanding my knowledge in machine learning algorithms, focusing on how they can be optimized for real-world problems. 
+                        I also enjoy exploring the intersections between theoretical computer science and practical applications in 
+                        areas such as software engineering and distributed systems. With a passion for continuous learning, I constantly try to find challenging algorithmic problems
                     </p>
                 </div>
             </article>
 
             <article class="intrest">
                 <div class="intrest-info">
-                    <h3>Matematyka</h3>
-                    <p>W matematyce interesuje mnie teoria grafów oraz rachunek prawdopodobieństwa. W przyszłości chciałbym dowiedzieć się więcej na temat topologii oraz analizy zespolonej</p>
+                    <h3>Mathematics</h3>
+                    <p>
+                        I study graph theory, probability and statistics, and mathematical analysis, which are crucial for 
+                        understanding and optimizing algorithms. Additionally, I am exploring areas such as number theory and combinatorics, as they have important applications in fields like cryptography, data security, and network design. Mathematics, for me, provides the necessary foundation to understand the logic 
+                        and structure behind algorithms and computational models.
+                    </p>
                 </div>
             </article>
 
             <article class="intrest">
                 <div class="intrest-info">
-                    <h3>Wspinaczka</h3>
-                    <p>W wolnym czasie lubię uprawiać sport, w szczególności wspinaczkę górską.</p>
+                    <h3>Rock climbing</h3>
+                    <p>
+                        In my free time I love rock climbing, both indoors and outdoors
+                    </p>
                 </div>
             </article>
 
             <article class="intrest">
                 <div class="intrest-info">
-                    <h3>Muzyka</h3>
-                    <p>Gram na pianinie oraz gitarze, interesuje się teorią muzyki i tworze własne utwory na komputerze.</p>
-                </div>
-            </article>
-
-            <article class="intrest">
-                <div class="intrest-info">
-                    <h3>Windsurfing i żeglarstwo</h3>
-                    <p>Od wielu lat każdy ciepły weekend spędzam nad wodą, surfując lub żeglując ze znajomymi.</p>
+                    <h3>Windsurfing and sailing</h3>
+                    <p>
+                        I am passionate about water sports and I love spending warm, summer days sailing or surfing
+                    </p>
                 </div>
             </article>
         </section>
