--- a/photos.html
+++ b/photos.html
@@ -21,12 +21,13 @@
     </header>
 
     <section class="gallery">
-        <h2>Moje Zdjęcia</h2>
+        <h2>Photos</h2>
             <aside>
-                <img src="photos/windsurf.webp"  alt="Zdjęcie 1">
+                To be continued :)
+                <!-- <img src="photos/windsurf.webp"  alt="Zdjęcie 1">
                 <img src="photos/boulder.webp"   alt="Zdjęcie 2">
                 <img src="photos/mountains.webp" alt="Zdjęcie 3">
-                <img src="photos/ml.webp"        alt="Zdjęcie 4">
+                <img src="photos/ml.webp"        alt="Zdjęcie 4"> -->
             </aside>   
     </section>
 
