--- a/projects.html
+++ b/projects.html
@@ -26,16 +26,20 @@
 
             <article class="project">
                 <div class="project-content">
-                    <h3>System Lublok</h3>
-                    <p>System do zarządzania i przechowywania rządowych dokumentów, napisany w C++, wykorzystuje technologie blockchainowe, systemy rozproszone i REST API</p>
+                    <h3>Lublok System</h3>
+                    <p>
+                        System for managing and storing government documents, written in C++ with blockchain technologies and distributed systems, using REST API, IPFS, STL and Boost libraries
+                    </p>
                     <a href="" class="btn">Check code</a>
                 </div>
             </article>
 
             <article class="project">
                 <div class="project-content">
-                    <h3>Gra w GO</h3>
-                    <p>Wieloosobowa gra napisana w Javie, z wykorzystaniem Hibernate oraz technologii klient-serwer. Aplikacja umożliwia również granie z botem oraz odtwarzanie gier i ruchów z bazy danych</p>
+                    <h3>GO board game</h3>
+                    <p>
+                        Multiplayer board game written in Java, using Maven build tool, Hibernate framework and client-server technology. Application has features like playing against bot and replaying games from database
+                    </p>
                     <a href="https://www.github.com/rrubaszek/GoBoardGame" class="btn">Check code</a>
                 </div>
             </article>
@@ -43,15 +47,19 @@
             <article class="project">
                 <div class="project-content">
                     <h3>Portfolio Online</h3>
-                    <p>Moja własna strona portfolio zbudowana wyłącznie przy użyciu HTML5 i CSS3, zoptymalizowana pod urządzenia mobilne.</p>
+                    <p>
+                        My own personal website, created with HTML5 and CSS3, optimized for mobile devices
+                    </p>
                     <a href="https://www.github.com/rrubaszek/WebPage" class="btn">Check code</a>
                 </div>
             </article>
 
             <article class="project">
                 <div class="project-content">
-                    <h3>Kompilator</h3>
-                    <p>Kompilator customowego języka imperatywnego na maszynę wirtualną, napisany w C++. Kompilator posiada optymalizaje, takie jak upraszczanie wyrażeń stałych, bądz usuwanie martwego kodu.</p>
+                    <h3>Compiler</h3>
+                    <p>
+                        Compiler of a custom imperative language for virtual machine, written in C++. Compiler is optimized for dead code removal, constant folding and propagation and register allocations
+                    </p>
                     <a href="https://www.github.com/rrubaszek/Compiler" class="btn">Check code</a>
                 </div>
             </article>
@@ -59,7 +67,8 @@
             <article class="project">
                 <div class="project-content">
                     <h3>Space Shooter</h3>
-                    <p>Gra singleplayer, napisana w C++ przy użyciu biblioteki graficznej. Wzorowana na grach arcade z lat 90.
+                    <p>
+                        Singleplayer game, written in C++ with Raylib graphic library, styled for arcade game from 80'
                     </p>
                     <a href="https://www.github.com/rrubaszek/SpaceShooter" class="btn">Check code</a>
                 </div>
@@ -68,7 +77,9 @@
             <article class="project">
                 <div class="project-content">
                     <h3>Number Recognition</h3>
-                    <p>Model sztucznej inteligencji do rozpoznawania cyfr pisanych ręcznie, zamiplementowany w Pythonie przy użyciu Tensorflow oraz Matplotlib, połączony z prostym GUI</p>
+                    <p>
+                        Application for handwritten digits recognition, written in Python3, with GUI. Application uses two models - convolutional model and random forest classifier. Both of them were implemented with TensorFlow and Keras libraries, trained on MNIST dataset
+                    </p>
                     <a href="#" class="btn">Check code</a>
                 </div>
             </article>
