--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moje Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleSass.css">
 </head>
 <body>
     <header>
         <h1>Portfolio</h1>
         <nav>
             <ul>
-                <li><a href="website.html" class="active">Main page</a></li>
+                <li><a href="index.html" class="active">Main page</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="detailedProjects.html">Project's Details</a></li>
                 <li><a href="intrests.html">Intrests</a></li>
@@ -54,5 +54,19 @@
     <footer>
         <p>&copy; 2025 my portfolio</p>
     </footer>
+
+    <script src="script.js"></script>
+
+    <noscript>
+        <style>
+          #menu-toggle {
+            display: none !important;
+          }
+      
+          nav ul {
+            display: block !important;
+          }
+        </style>
+    </noscript>
 </body>
 </html>
