--- a/photos.html
+++ b/photos.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeria Zdjęć</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleSass.css">
 </head>
 <body>
     <header>
         <h1>Portfolio</h1>
         <nav>
             <ul>
-                <li><a href="website.html">Main page</a></li>
+                <li><a href="index.html">Main page</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="detailedProjects.html">Project's Details</a></li>
                 <li><a href="intrests.html">Intrests</a></li>
@@ -22,18 +22,24 @@
 
     <section class="gallery">
         <h2>Photos</h2>
-            <aside>
-                To be continued :)
-                <!-- <img src="photos/windsurf.webp"  alt="Zdjęcie 1">
-                <img src="photos/boulder.webp"   alt="Zdjęcie 2">
-                <img src="photos/mountains.webp" alt="Zdjęcie 3">
-                <img src="photos/ml.webp"        alt="Zdjęcie 4"> -->
-            </aside>   
     </section>
 
     <footer>
         <p>&copy; 2025 my portfolio</p>
     </footer>
 
+    <script src="script.js"></script>
+
+    <noscript>
+        <style>
+          #menu-toggle {
+            display: none !important;
+          }
+      
+          nav ul {
+            display: block !important;
+          }
+        </style>
+      </noscript>
 </body>
 </html>
